[package]
name = "moho-recursive-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-merkle.workspace = true
strata-predicate.workspace = true

borsh.workspace = true
moho-types.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
zkaleido.workspace = true

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
zkaleido-native-adapter.workspace = true

[lints]
workspace = true
