[package]
name = "moho-recursive-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-merkle.workspace = true
strata-predicate.workspace = true

moho-types.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
zkaleido.workspace = true

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
zkaleido-native-adapter.workspace = true

[dev-dependencies]
k256 = { version = "0.13.4", features = ["schnorr"] }
rand_core = "0.6"

[lints]
workspace = true
