[package]
name = "moho-types"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-merkle = { workspace = true, features = ["ssz"] }
strata-predicate.workspace = true

const-hex = { workspace = true, optional = true }
hex.workspace = true
serde = { workspace = true, optional = true }
sha2.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_primitives.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
zkaleido.workspace = true

[features]
serde = [
  "dep:serde",
  "dep:const-hex",
  "ssz_types/serde",
  "strata-predicate/serde",
]

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
bincode.workspace = true
proptest = "1.11"
serde_json.workspace = true
